Avoid content overflow

--- a/stylesheets/common.css
+++ b/stylesheets/common.css
@@ -133,6 +133,7 @@ button, input, textarea
     background-color: white;
     border-radius: 2px;
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
+    word-wrap: break-word;
 }
 
 .post > header
